welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:1: error: not found: type int
def compa(n:int){
            ^countTeen:3: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true
           ^countTeen:3: warning: enclosing method compa has result type Unit: return value discarded
    return true
    ^countTeen:5: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  else return false
              ^countTeen:5: warning: enclosing method compa has result type Unit: return value discarded
  else return false
       ^