welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
def compa(n:int){
  if(19>=n && n>=13){
    return true
  }
  else return false
}

def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
  var counter=0
  if (compa(a)==true){
    counter=counter+1
  }
  else if (compa(b)==true){
    counter=counter+1
  }
  else if (compa(c)==true){
    counter=counter+1
  }
  else if (compa(d)==true){
    counter=counter+1
  }
  return counter
  
}